Verification of the slider photos

--- a/index.html
+++ b/index.html
@@ -347,13 +347,11 @@
                     <div class="slider__text-box slider__text-box--slide3">
                         <h2 class="slider__headers">Kształtki i armatura wodociągowa</h2>
                         <p class="slider__description">Oferta produktów hydraulicznych służących do budowy nowych
-                            instalacji oraz modernizacji istniejących systemów.</p>
+                            instalacji oraz modernizacji i naprawy istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/kształtki-wodociągowe-mobile.jpg"
-                        alt="Slide 3">
-                    <img class="slider__img slider__img--desktop" src="./img/kształtki-wodociągowe-desktop.jpg"
-                        alt="Slide 3">
+                    <img class="slider__img slider__img--mobile" src="./img/kształtki-wodociągowe-mobile.jpg" alt="Slide 3">
+                    <img class="slider__img slider__img--desktop" src="./img/kształtki-wodociągowe-desktop.jpg" alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
                     <div class="slider__text-box slider__text-box--slide4">
