--- a/index.html
+++ b/index.html
@@ -350,8 +350,8 @@
                             instalacji oraz modernizacji i naprawy istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/kształtki-wodociągowe-mobile.jpg" alt="Slide 3">
-                    <img class="slider__img slider__img--desktop" src="./img/kształtki-wodociągowe-desktop.jpg" alt="Slide 3">
+                    <img class="slider__img slider__img--mobile" src="./img/Industrial pipeline wedge gate valve isolated-mobile.jpg" alt="Slide 3">
+                    <img class="slider__img slider__img--desktop" src="./img/Industrial pipeline wedge gate valve isolated-desktop.jpg" alt="Slide 3">
                 </div>
                 <div class="slider__slide-box" id="slide4">
                     <div class="slider__text-box slider__text-box--slide4">
