Added new photos

--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                         <a href="#" class="slider__btn">O nas</a>
                     </div>
                     <img class="slider__img slider__img--mobile"
-                        src="./img/daniele-levis-pelusi-QHSuZvRUZXY-unsplash-mobile.webp"
+                        src="./img/water-splash-mobile.jpg"
                         alt="Wzburzona woda z pęcherzykami powietrza">
                     <img class="slider__img slider__img--desktop"
-                        src="./img/daniele-levis-pelusi-QHSuZvRUZXY-unsplash-desktop.webp"
+                        src="./img/water-splash-desktop.jpg"
                         alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
@@ -340,8 +340,8 @@
                             deszczowej, a także systemu drenażu.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/system-rur-mobile.jpg" alt="Slide 2">
-                    <img class="slider__img slider__img--desktop" src="./img/system-rur-desktop.jpg" alt="Slide 2">
+                    <img class="slider__img slider__img--mobile" src="./img/system-rur-mobile.jpg" alt="Prezentacja różnego rodzaju rur">
+                    <img class="slider__img slider__img--desktop" src="./img/system-rur-desktop.jpg" alt="Prezentacja różnego rodzaju rur">
                 </div>
                 <div class="slider__slide-box" id="slide3">
                     <div class="slider__text-box slider__text-box--slide3">
@@ -350,8 +350,8 @@
                             instalacji oraz modernizacji i naprawy istniejących systemów.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/Industrial pipeline wedge gate valve isolated-mobile.jpg" alt="Slide 3">
-                    <img class="slider__img slider__img--desktop" src="./img/Industrial pipeline wedge gate valve isolated-desktop.jpg" alt="Slide 3">
+                    <img class="slider__img slider__img--mobile" src="./img/Industrial pipeline wedge gate valve isolated-mobile.jpg" alt="Prezentacja zasuwy kołnierzowej">
+                    <img class="slider__img slider__img--desktop" src="./img/Industrial pipeline wedge gate valve isolated-desktop.jpg" alt="Prezentacja zasuwy kołnierzowej">
                 </div>
                 <div class="slider__slide-box" id="slide4">
                     <div class="slider__text-box slider__text-box--slide4">
@@ -361,9 +361,9 @@
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
                     <img class="slider__img slider__img--mobile" src="./img/kształtki-kanalizacyjne-mobile.jpg"
-                        alt="Slide 4">
+                        alt="Prezentacja kształtek kanalizacyjnych pvc">
                     <img class="slider__img slider__img--desktop" src="./img/kształtki-kanalizacyjne-desktop.jpg"
-                        alt="Slide 4">
+                        alt="Prezentacja kształtek kanalizacyjnych pvc">
                 </div>
                 <div class="slider__slide-box" id="slide5">
                     <div class="slider__text-box slider__text-box--slide5">
@@ -372,8 +372,8 @@
                             wpusty czy skrzynki uliczne.</p>
                         <a href="#" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/two-track-road.webp" alt="Slide 5">
-                    <img class="slider__img slider__img--desktop" src="./img/two-track-road.webp" alt="Slide 5">
+                    <img class="slider__img slider__img--mobile" src="./img/zeliwo-drogowe-mobile.jpg" alt="Prezentacja żeliwa drogowego">
+                    <img class="slider__img slider__img--desktop" src="./img/zeliwo-drogowe-desktop.jpg" alt="Prezentacja żeliwa drogowego">
                 </div>
                 <i class="arrow arrow--prevBtn fa-solid fa-arrow-left" id="prevBtn"></i>
                 <i class="arrow arrow--nextBtn fa-solid fa-arrow-right" id="nextBtn"></i>
