Changed photos of the main slider to webp format

--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
     </script>
     <script src="https://kit.fontawesome.com/6f551a8353.js" crossorigin="anonymous"></script>
     <link href="./css/hamburgers.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <nav class="nav-mobile">
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" aria-label="Systemy rur" href="#">
             <div class="nav-mobile__icon">
                 <svg viewBox="-2.4 -2.4 28.80 28.80" id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg"
                     fill="#1f2d5a" stroke="#1f2d5a">
@@ -77,7 +76,7 @@
             </div>
             <p class="nav-mobile__text">Systemy rur</p>
         </a>
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" aria-label="Armatura wodociągowa" href="#">
             <div class="nav-mobile__icon">
                 <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-49.6 -49.6 595.20 595.20" xml:space="preserve"
@@ -111,7 +110,7 @@
             </div>
             <p class="nav-mobile__text">Armatura wodociągowa</p>
         </a>
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" aria-label="Kształtki kanalizacyjne" href="#">
             <div class="nav-mobile__icon">
                 <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-51.2 -51.2 614.40 614.40" xml:space="preserve"
@@ -131,7 +130,7 @@
             </div>
             <p class="nav-mobile__text">Kształtki kanalizacyjne</p>
         </a>
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" aria-label="Żeliwo drogowe" href="#">
             <div class="nav-mobile__icon">
                 <svg viewBox="-2.4 -2.4 28.80 28.80" fill="none" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a"
                     stroke-width="1.2">
@@ -150,7 +149,7 @@
             </div>
             <p class="nav-mobile__text">Żeliwo drogowe</p>
         </a>
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" aria-label="Studnie" href="#">
             <div class="nav-mobile__icon">
                 <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-29.86 -29.86 358.32 358.32"
@@ -171,7 +170,7 @@
             </div>
             <p class="nav-mobile__text">Studnie</p>
         </a>
-        <a class="nav-mobile__items" href="#">
+        <a class="nav-mobile__items" aria-label="O nas" href="#">
             <div class="nav-mobile__icon">
                 <svg fill="#1f2d5a" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                     xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="-7 -7 84.00 84.00"
@@ -231,7 +230,7 @@
             </div>
             <p class="nav-mobile__text">O nas</p>
         </a>
-        <a class="nav-mobile__items" href="#contact" id="forwardToContact">
+        <a class="nav-mobile__items" aria-label="Kontakt" href="#contact" id="forwardToContact">
             <div class="nav-mobile__icon">
                 <svg fill="#1f2d5a" viewBox="-6.4 -6.4 76.80 76.80" version="1.1" xml:space="preserve"
                     xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" stroke="#1f2d5a"
@@ -279,13 +278,13 @@
     <header class="section">
         <div class="header container">
             <div class="header__box">
-                <a class="header__logo-link" href="./index.html"><img src="./icons/budo-instal-logo.svg"
+                <a class="header__logo-link" href="./index.html" aria-label="Budo Instal"><img src="./icons/budo-instal-logo.svg"
                         alt="Logo firmy Budo Instal" class="header__logo"></a>
                 <nav class="header__nav-desktop-box">
                     <div class="header__nav-desktop">
-                        <a class="header__second-nav-box">
+                        <a class="header__second-nav-box" aria-label="Oferta">
                             <p class="header__nav-item header__nav-item--p">Oferta</p>
-                            <button class="header__drop-down-close-btn"><svg fill="#1f2d5a" width="2em" height="2em"
+                            <button class="header__drop-down-close-btn" aria-label="Zamknij"><svg fill="#1f2d5a" width="2em" height="2em"
                                     viewBox="0 0 32.00 32.00" xmlns="http://www.w3.org/2000/svg" stroke="#1f2d5a"
                                     stroke-width="0.00032">
                                     <g id="SVGRepo_bgCarrier" stroke-width="0"></g>
@@ -298,17 +297,17 @@
                                 </svg></button>
                         </a>
                         <div class="header__drop-down-nav-box">
-                            <a class="header__drop-down-nav-link" href="#">System rur</a>
-                            <a class="header__drop-down-nav-link" href="#">Armatura wodociągowa</a>
-                            <a class="header__drop-down-nav-link" href="#">Kształtki kanalizacyjne</a>
-                            <a class="header__drop-down-nav-link" href="#">Żeliwo drogowe</a>
-                            <a class="header__drop-down-nav-link" href="#">Studnie</a>
+                            <a class="header__drop-down-nav-link" href="#" aria-label="System rur">System rur</a>
+                            <a class="header__drop-down-nav-link" href="#" aria-label="Armatura wodociągowa">Armatura wodociągowa</a>
+                            <a class="header__drop-down-nav-link" href="#" aria-label="Kształtki kanalizacyjne">Kształtki kanalizacyjne</a>
+                            <a class="header__drop-down-nav-link" href="#" aria-label="Żeliwo drogowe">Żeliwo drogowe</a>
+                            <a class="header__drop-down-nav-link" href="#" aria-label="Studnie">Studnie</a>
                         </div>
-                        <a class="header__nav-item" href="#">O nas</a>
-                        <a class="header__nav-item" href="#contact">kontakt</a>
+                        <a class="header__nav-item" href="#" aria-label="O nas">O nas</a>
+                        <a class="header__nav-item" href="#contact" aria-label="Kontakt">kontakt</a>
                     </div>
                 </nav>
-                <button class="hamburger hamburger--collapse" type="button">
+                <button class="hamburger hamburger--collapse" type="button" aria-label="Menu">
                     <span class="hamburger-box">
                         <span class="hamburger-inner"></span>
                     </span>
@@ -324,13 +323,13 @@
                         <h1 class="slider__headers">Specjalistyczna sprzedaż hurtowa</h1>
                         <p class="slider__description">Materiały do budowy systemu sieci wodociągowej i systemu
                             kanalizacji.</p>
-                        <a href="#" class="slider__btn">O nas</a>
+                        <a href="#" aria-label="O nas" class="slider__btn">O nas</a>
                     </div>
                     <img class="slider__img slider__img--mobile"
-                        src="./img/water-splash-mobile.jpg"
+                        src="./img/water-splash-mobile.webp" height="433px" width="600px"
                         alt="Wzburzona woda z pęcherzykami powietrza">
-                    <img class="slider__img slider__img--desktop"
-                        src="./img/water-splash-desktop.jpg"
+                    <img class="slider__img slider__img--desktop" height="650px" width="900px"
+                        src="./img/water-splash-desktop.webp"
                         alt="Slide 1">
                 </div>
                 <div class="slider__slide-box" id="slide2">
@@ -338,31 +337,31 @@
                         <h2 class="slider__headers">Systemy rur</h2>
                         <p class="slider__description">System rur do budowy sieci wody pitnej, kanalizacji sanitarnej i
                             deszczowej, a także systemu drenażu.</p>
-                        <a href="#" class="slider__btn">Dowiedz się więcej</a>
+                        <a href="#" aria-label="Dowiedz się więcej" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/system-rur-mobile.jpg" alt="Prezentacja różnego rodzaju rur">
-                    <img class="slider__img slider__img--desktop" src="./img/system-rur-desktop.jpg" alt="Prezentacja różnego rodzaju rur">
+                    <img loading="lazy" class="slider__img slider__img--mobile" src="./img/system-rur-mobile.webp" height="433px" width="600px" alt="Prezentacja różnego rodzaju rur">
+                    <img loading="lazy" class="slider__img slider__img--desktop" src="./img/system-rur-desktop.webp" height="650px" width="900px" alt="Prezentacja różnego rodzaju rur">
                 </div>
                 <div class="slider__slide-box" id="slide3">
                     <div class="slider__text-box slider__text-box--slide3">
                         <h2 class="slider__headers">Kształtki i armatura wodociągowa</h2>
                         <p class="slider__description">Oferta produktów hydraulicznych służących do budowy nowych
                             instalacji oraz modernizacji i naprawy istniejących systemów.</p>
-                        <a href="#" class="slider__btn">Dowiedz się więcej</a>
+                        <a href="#" aria-label="Dowiedz się więcej" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/Industrial pipeline wedge gate valve isolated-mobile.jpg" alt="Prezentacja zasuwy kołnierzowej">
-                    <img class="slider__img slider__img--desktop" src="./img/Industrial pipeline wedge gate valve isolated-desktop.jpg" alt="Prezentacja zasuwy kołnierzowej">
+                    <img loading="lazy" class="slider__img slider__img--mobile" src="./img/ksztaltki-wodociagowe-mobile.webp"  height="433px" width="600px" alt="Prezentacja zasuwy kołnierzowej">
+                    <img loading="lazy" class="slider__img slider__img--desktop" src="./img/ksztaltki-wodociagowe-desktop.webp"  height="650px" width="900px" alt="Prezentacja zasuwy kołnierzowej">
                 </div>
                 <div class="slider__slide-box" id="slide4">
                     <div class="slider__text-box slider__text-box--slide4">
                         <h2 class="slider__headers">Kształtki PVC kanalizacji zewnętrznej</h2>
                         <p class="slider__description">Szeroki asortyment elementów systemu do montażu sieci
                             kanalizacyjnej.</p>
-                        <a href="#" class="slider__btn">Dowiedz się więcej</a>
+                        <a href="#" aria-label="Dowiedz się więcej" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/kształtki-kanalizacyjne-mobile.jpg"
-                        alt="Prezentacja kształtek kanalizacyjnych pvc">
-                    <img class="slider__img slider__img--desktop" src="./img/kształtki-kanalizacyjne-desktop.jpg"
+                    <img loading="lazy" class="slider__img slider__img--mobile" src="./img/kształtki-kanalizacyjne-mobile.webp"
+                    height="433px" width="600px" alt="Prezentacja kształtek kanalizacyjnych pvc">
+                    <img loading="lazy" class="slider__img slider__img--desktop" src="./img/kształtki-kanalizacyjne-desktop.webp" height="650px" width="900px"
                         alt="Prezentacja kształtek kanalizacyjnych pvc">
                 </div>
                 <div class="slider__slide-box" id="slide5">
@@ -370,10 +369,10 @@
                         <h2 class="slider__headers">Żeliwo drogowe</h2>
                         <p class="slider__description">Oferta asortymentu infrastruktury drogowej z żeliwa, czyli włazy,
                             wpusty czy skrzynki uliczne.</p>
-                        <a href="#" class="slider__btn">Dowiedz się więcej</a>
+                        <a href="#" aria-label="Dowiedz się więcej" class="slider__btn">Dowiedz się więcej</a>
                     </div>
-                    <img class="slider__img slider__img--mobile" src="./img/zeliwo-drogowe-mobile.jpg" alt="Prezentacja żeliwa drogowego">
-                    <img class="slider__img slider__img--desktop" src="./img/zeliwo-drogowe-desktop.jpg" alt="Prezentacja żeliwa drogowego">
+                    <img loading="lazy" class="slider__img slider__img--mobile" src="./img/zeliwo-drogowe-mobile.webp" height="450px" width="550px" alt="Prezentacja żeliwa drogowego">
+                    <img loading="lazy" class="slider__img slider__img--desktop" src="./img/zeliwo-drogowe-desktop.webp"  height="650px" width="900px" alt="Prezentacja żeliwa drogowego">
                 </div>
                 <i class="arrow arrow--prevBtn fa-solid fa-arrow-left" id="prevBtn"></i>
                 <i class="arrow arrow--nextBtn fa-solid fa-arrow-right" id="nextBtn"></i>
@@ -427,7 +426,7 @@
                                 alt="Logo producenta Bohamet"></div>
                     </div>
                     <div class="brand-slider__btn-box">
-                        <button class="brand-slider__btn">Dowiedz się więcej</button>
+                        <button class="brand-slider__btn" aria-label="Dowiedz się więcej">Dowiedz się więcej</button>
                     </div>
                 </div>
             </div>
@@ -741,7 +740,7 @@
                                     <textarea name="contact-msg" class="contact-textarea" id="contact-msg" cols="30"
                                         rows="10" placeholder="Treść wiadomości" required=""></textarea>
                                 </div>
-                                <button class="contact-btn" type="submit" name="contact-submit">Wyślij
+                                <button class="contact-btn" type="submit" name="contact-submit" aria-label="Wyślij">Wyślij
                                     wiadomość</button>
                             </form>
                         </div>
@@ -749,7 +748,7 @@
                     <p class="privacy-policy">Uzupełnienie formularza oznacza, że podane w nim dane osobowe będą
                         wykorzystywane oraz
                         przetwarzane w celu udzielenia odpowiedzi. Jeśli Twoje zapytanie będzie związane z zakresem
-                        naszych usług, w odpowiedzi możemy przedstawić Ci ofertę. <a href="#">Dowiedz
+                        naszych usług, w odpowiedzi możemy przedstawić Ci ofertę. <a href="#" aria-label="Dowiedz się więcej" >Dowiedz
                             się, jak przetwarzamy Twoje dane.</a></p>
                 </div>
             </div>
@@ -758,12 +757,12 @@
     <footer>
         <div class="footer-container section">
             <div class="legal-rules">
-                <a href="./index.html"><img src="./icons/budo-instal-logo.svg" alt="Logo firmy Budo Instal"
+                <a href="./index.html" aria-label="Budo Instal"><img src="./icons/budo-instal-logo.svg" alt="Logo firmy Budo Instal"
                         class="footer-logo"></a>
                 <div class="legal-links">
-                    <a class="legal-link" href="#">Polityka plików cookies</a>
-                    <a class="legal-link" href="#">Polityka prywatności</a>
-                    <a class="legal-link" href="#">Informacje o plikach</a>
+                    <a class="legal-link" href="#" aria-label="Polityka plików cookies">Polityka plików cookies</a>
+                    <a class="legal-link" href="#" aria-label="Polityka prywatności">Polityka prywatności</a>
+                    <a class="legal-link" href="#" aria-label="Informacje o plikach">Informacje o plikach</a>
                 </div>
                 <div class="copyright">
                     <p class="legal-link">Copyright © <span class="footer_year"></span> Budo-Instal 2 Sławomir Czyżewski
@@ -772,8 +771,6 @@
             </div>
         </div>
     </footer>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@3.0.1/dist/cookieconsent.umd.js"></script>
     <script src="./js/script.js"></script>
 </body>
 
